fix: apiドキュメントの修正
