# iruyan-api/docs/swagger.json
@@ -48,8 +48,8 @@
                     {
                         "type": "string",
                         "default": "johndoe",
-                        "description": "IruyanID",
-                        "name": "iruyanID",
+                        "description": "Iruyan ID",
+                        "name": "iruyanId",
                         "in": "formData",
                         "required": true
                     },
@@ -95,8 +95,8 @@
                     {
                         "type": "string",
                         "default": "johndoe",
-                        "description": "IruyanID",
-                        "name": "iruyanID",
+                        "description": "Iruyan ID",
+                        "name": "iruyanId",
                         "in": "formData",
                         "required": true
                     }
@@ -158,8 +158,8 @@
                     {
                         "type": "string",
                         "default": "johndoe",
-                        "description": "IruyanID",
-                        "name": "iruyanID",
+                        "description": "Iruyan ID",
+                        "name": "iruyanId",
                         "in": "formData",
                         "required": true
                     },
@@ -175,7 +175,7 @@
                         "type": "string",
                         "default": "John Doe",
                         "description": "Name",
-                        "name": "name",
+                        "name": "userName",
                         "in": "formData",
                         "required": true
                     },
@@ -244,8 +244,9 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "RoomA",
                         "description": "Room Name",
-                        "name": "name",
+                        "name": "roomName",
                         "in": "formData",
                         "required": true
                     }
@@ -272,7 +273,7 @@
                 }
             }
         },
-        "/rooms/{room_id}": {
+        "/rooms/{roomId}": {
             "get": {
                 "description": "Retrieves the details of a specific room",
                 "produces": [
@@ -286,7 +287,7 @@
                     {
                         "type": "string",
                         "description": "Room ID",
-                        "name": "room_id",
+                        "name": "roomId",
                         "in": "path",
                         "required": true
                     }
@@ -307,7 +308,7 @@
                 }
             }
         },
-        "/rooms/{room_id}/enter/{user_id}": {
+        "/rooms/{roomId}/enter/{iruyanId}": {
             "post": {
                 "description": "Records the entry time of a user entering a specific room and stores the entry information in WorkTime.",
                 "consumes": [
@@ -324,14 +325,15 @@
                     {
                         "type": "string",
                         "description": "Room ID",
-                        "name": "room_id",
+                        "name": "roomId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "User ID",
-                        "name": "user_id",
+                        "default": "johndoe",
+                        "description": "Iruyan ID",
+                        "name": "iruyanId",
                         "in": "path",
                         "required": true
                     }
@@ -358,7 +360,7 @@
                 }
             }
         },
-        "/rooms/{room_id}/leave": {
+        "/rooms/{roomId}/leave": {
             "post": {
                 "description": "Allows a user to leave a specific room and records the leaving time",
                 "produces": [
@@ -372,19 +374,21 @@
                     {
                         "type": "string",
                         "description": "Room ID",
-                        "name": "room_id",
+                        "name": "roomId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "User ID",
-                        "name": "user_id",
+                        "default": "johndoe",
+                        "description": "Iruyan ID",
+                        "name": "iruyanId",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
+                        "default": "1h2m3s",
                         "description": "Duration (e.g., 1h2m3s)",
                         "name": "duration",
                         "in": "formData",
